--- a/coc-settings.json
+++ b/coc-settings.json
@@ -6,5 +6,12 @@
       "filetypes": ["go"]
     }
   },
-  "clangd.path": "/Users/zls/.config/coc/extensions/coc-clangd-data/install/11.0.0/clangd_11.0.0/bin/clangd"
+  "clangd.path": "/Users/zls/.config/coc/extensions/coc-clangd-data/install/11.0.0/clangd_11.0.0/bin/clangd",
+  "snippets.ultisnips.pythonPrompt": false,
+  "git.gitlab.hosts": [
+    "gitlab.example.com",
+    "gitlab.com",
+    "code.byted.org"
+  ],
+  "git.enableGutters": true
 }
